crates/normalize-surface-syntax/tests/snapshots/snapshots__typescript_reader__arrow_function.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
expression: "parse(\"const add = (a, b) => a + b;\")"
---
{
  "body": [
    {
      "Let": {
        "name": "add",
        "init": {
          "Function": {
            "name": "",
            "params": [
              {
                "name": "a"
              },
              {
                "name": "b"
              }
            ],
            "body": [
              {
                "Return": {
                  "Binary": {
                    "left": {
                      "Ident": "a"
                    },
                    "op": "Add",
                    "right": {
                      "Ident": "b"
                    }
                  }
                }
              }
            ]
          }
        },
        "mutable": false
      }
    }
  ]
}
