crates/normalize-surface-syntax/tests/snapshots/snapshots__typescript_reader__comparison_operators.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
assertion_line: 37
expression: "parse(\"const check = x > 0 && y <= 10;\")"
---
{
  "body": [
    {
      "Let": {
        "name": "check",
        "init": {
          "Binary": {
            "left": {
              "Binary": {
                "left": {
                  "Ident": "x"
                },
                "op": "Gt",
                "right": {
                  "Literal": {
                    "Number": 0.0
                  }
                }
              }
            },
            "op": "And",
            "right": {
              "Binary": {
                "left": {
                  "Ident": "y"
                },
                "op": "Le",
                "right": {
                  "Literal": {
                    "Number": 10.0
                  }
                }
              }
            }
          }
        },
        "mutable": false
      }
    }
  ]
}
