crates/normalize-surface-syntax/tests/snapshots/snapshots__typescript_reader__let_declaration.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
assertion_line: 27
expression: "parse(\"let y = \\\"hello\\\";\")"
---
{
  "body": [
    {
      "Let": {
        "name": "y",
        "init": {
          "Literal": {
            "String": "hello"
          }
        },
        "mutable": true
      }
    }
  ]
}
